# LLM-Foundations

./: README.md
SpecialTokensCT/: chat_templates_lab.ipynb
Tokenizers/: tokenizers_lab.ipynb
environment_setup/: README.md  pyproject.toml  setup.sh
